Adding Spring Security in order to secure /admin/* endpoints and creating DbInit clas which fill empty DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.security.user.password=password
 #spring.security.user.roles=USER
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+security:
+basic:
+enabled: true
+authorize-mode: NONE
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #spring.thymeleaf.enabled=false
 
 
