--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/BicycleRental
-#spring.datasource.url=jdbc:postgresql://25.21.116.220:5432/BicycleRental
+#spring.datasource.url=jdbc:postgresql://localhost:5432/BicycleRental
+spring.datasource.url=jdbc:postgresql://25.21.116.220:5432/BicycleRental
 spring.datasource.username=postgres
 spring.datasource.password=password
 
