Adding docker configuration to project.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/BicycleRental
+#lokalnie
+#spring.datasource.url=jdbc:postgresql://localhost:5432/BicycleRental
+#kontener
+spring.datasource.url=jdbc:postgresql://bicycle_rental_db:5432/BicycleRental
+#zdalna baza
 #spring.datasource.url=jdbc:postgresql://25.21.116.220:5432/BicycleRental
 spring.datasource.username=postgres
 spring.datasource.password=password
