--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #lokalnie
 #spring.datasource.url=jdbc:postgresql://localhost:5432/BicycleRental
 #kontener
-spring.datasource.url=jdbc:postgresql://bicycle_rental_db:5432/BicycleRental
-#zdalna baza
+#spring.datasource.url=jdbc:postgresql://bicycle_rental_db:5432/BicycleRental
+#zdalna baza Piter
 #spring.datasource.url=jdbc:postgresql://25.21.116.220:5432/BicycleRental
-spring.datasource.username=postgres
-spring.datasource.password=password
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+
+#baza render.com
+spring.datasource.url=jdbc:postgresql:dpg-cnmd9qq1hbls739g7akg-a:5432/bicycle_rental
+spring.datasource.username=user
+spring.datasource.password=Z9fT7aDQf8m0wzQVZI7XoP4KlwkyPGIJ
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=update
