application.properties update - deploy version on render.com draft.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:postgresql:dpg-cnmd9qq1hbls739g7akg-a:5432/bicycle_re
 spring.datasource.username=user
 spring.datasource.password=Z9fT7aDQf8m0wzQVZI7XoP4KlwkyPGIJ
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
