application.properties update - deploy version on render.com draft.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.password=password
 
 #baza render.com
-spring.datasource.url=jdbc:postgresql:dpg-cnmd9qq1hbls739g7akg-a:5432/bicycle_rental
+spring.datasource.url=jdbc:postgresql:postgres://user:Z9fT7aDQf8m0wzQVZI7XoP4KlwkyPGIJ@dpg-cnmd9qq1hbls739g7akg-a.frankfurt-postgres.render.com/bicycle_rental:5432/bicycle_rental
 spring.datasource.username=user
 spring.datasource.password=Z9fT7aDQf8m0wzQVZI7XoP4KlwkyPGIJ
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
