application.properties update - deploy version on render.com draft.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.password=password
 
 #baza render.com
-spring.datasource.url=jdbc:postgresql:postgres://dpg-cnmd9qq1hbls739g7akg-a.frankfurt-postgres.render.com/bicycle_rental
+spring.datasource.url=jdbc:postgresql://dpg-cnmd9qq1hbls739g7akg-a.frankfurt-postgres.render.com/bicycle_rental
 spring.datasource.username=user
 spring.datasource.password=Z9fT7aDQf8m0wzQVZI7XoP4KlwkyPGIJ
 
